--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@bar, @bar.users.build]) do |f| %>
+<%= form_for([@bar, @user]) do |f| %>
   <p>
     <%= f.label :name %><br>
     <%= f.text_field :name %>
