--- a/app/views/bars/index.html.erb
+++ b/app/views/bars/index.html.erb
@@ -1,3 +1,4 @@
+<div class="home">
 <h1> Bars in Cape Town </h1>
 
 <h2> Click on any of the links below to find out who's going where tonight </h2>
@@ -8,3 +9,5 @@
       <li><%= link_to bar.name, bar_path(bar) %></li>
   <% end %>
  </ul>
+
+ </div>
