--- a/app/views/bars/show.html.erb
+++ b/app/views/bars/show.html.erb
@@ -5,12 +5,12 @@
 <p> <%= @bar.description %> </p>
 
 
-
 <h3>Coming:</h3>
 <%= render @bar.users %>
 
 
 <h3>Are you coming?</h3>
+<% @user = User.new %>
 <%= render 'users/form' %>
 
 
