--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_for([@bar, @bar.users.build]) do |f| %>
+<%= form_for([@bar, @user]) do |f| %>
+
   <p>
     <%= f.label :name %><br>
     <%= f.text_field :name %>
@@ -7,15 +8,16 @@
     <%= f.label :phone_number %><br>
     <%= f.text_area :phone_number %>
   </p>
-   <p>
+  <p>
     <%= f.label :time %><br>
     <%= f.text_area :time %>
   </p>
-   <p>
+  <p>
     <%= f.label :notes %><br>
     <%= f.text_area :notes %>
   </p>
   <p>
     <%= f.submit %>
   </p>
+
 <% end %>
